# canonicald

./: .gitignore  Makefile  config.h  configure.ac  libtool
src/: Makefile  Makefile.am  canonical_config.h  main.c
tests/: Makefile  Makefile.am
