TESTS = check_canonical_config
check_PROGRAMS = check_canonical_config
check_canonical_config_SOURCES = check_canonical_config.c $(top_builddir)/src/canonical_config.h
check_canonical_config_CFLAGS = @CHECK_CFLAGS@
check_canonical_config_LDADD = $(top_builddir)/src/libcanonical_config.la @CHECK_LIBS@
